2010-06-24  John W. Eaton  <jwe@octave.org>

	* plot/private/__plt__.m: Replace usage message with error.
	* plot/loglog.m, plot/plot.m, plot/polar.m, plot/semilogx.m,
	plot/semilogy.m: Call print_usage if no args are supplied.
        Add additional calling forms to documentation.

2010-06-24  Shai Ayal  <shaiay@users.sourceforge.net>

	* plot/print.m: convert to wrapper for backend specific print functions
	* plot/__gnuplot_print__.m: New gnuplot specific print function,
	largely based on the former print.m
	* plot/__fltk_print__.m: New fltk specific print function
	* plot/__print_parse_opts__.m: New option parser for print
	functions, largely based on the former print.m
	* plot/module.mk: Add new m-files here

2010-06-23  David Bateman  <dbateman@free.fr>

	* whitebg.m: New function.
	* module.mk (plot_FCN_FILES): Add it here.
	* __go_draw_figure__.m: Set the border color to the inverse of the
	background color.

2010-06-17  Brad Froehle <brad.froehle@gmail.com>

	* sparse/spy.m: Fix typo.

2010-06-16  Rik <octave@nomad.inbox5.com>

        * set/union.m: Remove seealso reference to deprecated function.

2010-06-16  Rik <octave@nomad.inbox5.com>

        * @ftp/dir.m, @ftp/ftp.m, @ftp/mget.m, @ftp/mput.m, @ftp/rename.m,
        deprecated/fstat.m, general/accumdim.m, general/interp1.m,
        linear-algebra/ishermitian.m, linear-algebra/issymmetric.m,
        miscellaneous/substruct.m, optimization/fminbnd.m,
        optimization/fsolve.m, plot/bar.m, plot/daspect.m, plot/pbaspect.m,
        plot/print.m, polynomial/mkpp.m, polynomial/ppval.m, set/union.m,
        signal/unwrap.m, specfun/nthroot.m: Periodic grammar check of
        documentation to ensure a common format.

2010-06-14  Rik <octave@nomad.inbox5.com>

        * plot/image.m: Flip data, rather than y-axis, for images.  (bug #30033)

2010-06-12  Ben Abbott <bpabbott@mac.com>

	* plot/scatter.m: New demo.
	* plot/private/__scatter__.m: Properly set default value markersize
	and marker type.
